--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
 <body>
     <h1>Welcome to my App</h1>
     <h5><em>This is a test for GitHub tutorial</em></h5>
+
+    <script src="app.js"></script>
 </body>
 </html>
