--- a/login.html
+++ b/login.html
@@ -6,11 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Welcome to my App</h1>
-    <h5><em>This is a test for GitHub tutorial</em></h5>
-
-    <p>Login Form</p>
-
-    <script src="app.js"></script>
+    <h1>Test login</h1>
 </body>
 </html>
